src/Services/cashServices/k8s/namespace-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cash-services
  labels:
    name: cash-services
    environment: production
